--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.6.1",
     "classnames": "^2.3.2",
+    "echarts": "^5.4.2",
+    "echarts-for-react": "^3.0.2",
     "exenv": "^1.2.2",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
